--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,6 @@
+a{
+  text-decoration:none;
+}
 .main{
   display:flex;
   flex-direction: row;
@@ -20,7 +23,7 @@
     margin:2%;
 }
 img{
-  width:100%;
+  max-width:100%;
   height:100%;
   dispaly:block;
   margin-left:auto;
@@ -28,4 +31,54 @@ img{
 }
 h2{
   text-align: center;
+}
+@media only screen and (min-width:481px) and (max-width:768px){
+  a{
+    font-size:35px;
+  }
+.main{
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+}
+.child1{
+  max-width:100%;
+  border:1px solid #000;
+  border-radius:15px;
+  box-shadow: 3px 3px 3px #000;
+  padding:2%;
+  margin:2%;
+}
+.child2{
+  max-width:100%;
+    border:1px solid #000;
+      border-radius:15px;
+      box-shadow: 3px 3px 3px #000;
+    padding:2%;
+    margin:2%;
+}
+@media only screen and (min-width:769px) and (max-width:1024px){
+a{
+  font-size:35px;
+}
+.main{
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+}
+.child1{
+  max-width:100%;
+  border:1px solid #000;
+  border-radius:15px;
+  box-shadow: 3px 3px 3px #000;
+  padding:2%;
+  margin:2%;
+}
+.child2{
+  max-width:100%;
+    border:1px solid #000;
+      border-radius:15px;
+      box-shadow: 3px 3px 3px #000;
+    padding:2%;
+    margin:2%;
 }
