--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,13 @@
+table{
+  width:90%;
+  box-shadow:3px 3px 3px #ddd;
+}
+td{
+  padding:2%;
+}
+tr:nth-child(even){
+  background:#ddd;
+}
 a{
   text-decoration:none;
 }
